test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/assign_to_void_lvalue.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  extern
  void
  *
  identifier(x)
  ;
  void
  identifier(foo)
  (
  void
  )
  {
  return
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  *
  identifier(x)
  =
  identifier(foo)
  (
  )
  ;
  return
  const int(0)
  ;
  }
